samples/_failures_safe/1761166497_07afc7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b8a2b949.c: In function ‘parser_init’:
./samples/SAFE/__tmp_b8a2b949.c:151:28: error: expected ‘;’ at end of input
  151 |     parser->error_count = 0
      |                            ^
      |                            ;
./samples/SAFE/__tmp_b8a2b949.c:151:5: error: expected declaration or statement at end of input
  151 |     parser->error_count = 0
      |     ^~~~~~
